@startuml
!include estilos.puml

package Jugador {
    class Jugador {
        - nombre : String
        - carta : Rol
        - estado : EstadoJugador
        + Jugador(String nombre, Rol carta)
        + miRol() : Rol
        + bando() : Bando
        + conoceElRolDe(Jugador) : boolean
        + estaVivo() : boolean
        + eliminar()
    }

    interface EstadoJugador {
        + estaVivo() : boolean
        + eliminar() : EstadoJugador
    }

    EstadoJugador <|.. Vivo
    EstadoJugador <|.. Eliminado
    Jugador *-- EstadoJugador
}
@enduml
